sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:12: error: not found: value lgr
		while(i+ecart<lgr)
                              ^